--- a/try_load.ipynb
+++ b/try_load.ipynb
@@ -127,7 +127,53 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 接入数据库\n",
+    "# 1、接入pinecone\n",
+    "import getpass\n",
+    "import os\n",
+    "import time\n",
+    "\n",
+    "from pinecone import Pinecone, ServerlessSpec\n",
+    "\n",
+    "if not os.getenv(\"PINECONE_API_KEY\"):\n",
+    "    os.environ[\"PINECONE_API_KEY\"] = getpass.getpass(\"Enter your Pinecone API key: \")\n",
+    "\n",
+    "pinecone_api_key = os.environ.get(\"PINECONE_API_KEY\")\n",
+    "\n",
+    "index = pinecone.GRPCIndex(index_name)\n",
+    "\n",
+    "index.describe_index_stats()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 接入数据库\n",
+    "# 接入pincone\n",
+    "import os\n",
+    "from pinecone import Pinecone\n",
+    "\n",
+    "pc = Pinecone(api_key=\"a6c88ef7-fd5d-4164-9699-6c85371d88c8\")\n",
+    "index = pc.Index(\"disinformation-tag\")\n",
+    "\n",
+    "from langchain_core.embeddings import FakeEmbeddings\n",
+    "embeddings = FakeEmbeddings(size=4096)\n",
+    "from langchain_pinecone import PineconeVectorStore\n",
+    "vector_store = PineconeVectorStore(index=index, embedding=embeddings)\n",
+    "\n",
+    "results = vector_store.similarity_search(\n",
+    "    \"LangChain provides abstractions to make working with LLMs easy\",\n",
+    "    k=1,\n",
+    "    filter={\"source\": \"tweet\"},\n",
+    ")\n",
+    "for res in results:\n",
+    "    print(f\"* {res.page_content} [{res.metadata}]\")\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "code",
