--- a/try_load.ipynb
+++ b/try_load.ipynb
@@ -9,7 +9,7 @@
     "#无需run\n",
     "from langchain_community.chat_models import ChatZhipuAI\n",
     "import os\n",
-    "os.environ[\"ZHIPUAI_API_KEY\"] = \"xx.xx\"\n",
+    "os.environ[\"ZHIPUAI_API_KEY\"] = \"36a142a628aca0e1fe1fa29a5e8fefff.kvXnRyd4sFT24xFZ\"\n",
     "llm = ChatZhipuAI(\n",
     "    model=\"glm-4\",\n",
     "    temperature=0.5,\n",
@@ -128,34 +128,111 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 接入数据库\n",
-    "# 1、接入pinecone\n",
-    "import getpass\n",
-    "import os\n",
-    "import time\n",
+    "# 接入数据库notuseble\n",
+    "# 1、接入mysql\n",
+    "from langchain import SQLDatabase\n",
+    "import mysql.connector\n",
+    "def connect_to_mysql():\n",
+    "    config = {\n",
+    "        'user': 'your_username',\n",
+    "        'password': 'your_password',\n",
+    "        'host': 'your_host',\n",
+    "        'database': 'your_database'\n",
+    "    }\n",
+    "    connection = mysql.connector.connect(**config)\n",
+    "    return connection\n",
+    "connection = connect_to_mysql()\n",
+    "db = SQLDatabase(connection)\n",
+    "from langchain.chains import SQLChain\n",
+    "from langchain.llms import OpenAI\n",
     "\n",
-    "from pinecone import Pinecone, ServerlessSpec\n",
+    "llm = OpenAI(temperature = 0)\n",
+    "sql_chain = SQLChain(llm = llm, database = db)\n",
     "\n",
-    "if not os.getenv(\"PINECONE_API_KEY\"):\n",
-    "    os.environ[\"PINECONE_API_KEY\"] = getpass.getpass(\"Enter your Pinecone API key: \")\n",
-    "\n",
-    "pinecone_api_key = os.environ.get(\"PINECONE_API_KEY\")\n",
-    "\n",
-    "index = pinecone.GRPCIndex(index_name)\n",
-    "\n",
-    "index.describe_index_stats()"
+    "query = \"SELECT * FROM users\"\n",
+    "result = sql_chain.run(query)\n",
+    "print(result)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'upserted_count': 6}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 接入数据库\n",
     "# 接入pincone\n",
+    "from pinecone import Pinecone\n",
+    "pc = Pinecone(\"a6c88ef7-fd5d-4164-9699-6c85371d88c8\")\n",
+    "index = pc.Index(\"notllm\")\n",
+    "data = [\n",
+    "    {\"id\": \"vec1\", \"text\": \"Apple is a popular fruit known for its sweetness and crisp texture.\"},\n",
+    "    {\"id\": \"vec2\", \"text\": \"The tech company Apple is known for its innovative products like the iPhone.\"},\n",
+    "    {\"id\": \"vec3\", \"text\": \"Many people enjoy eating apples as a healthy snack.\"},\n",
+    "    {\"id\": \"vec4\", \"text\": \"Apple Inc. has revolutionized the tech industry with its sleek designs and user-friendly interfaces.\"},\n",
+    "    {\"id\": \"vec5\", \"text\": \"An apple a day keeps the doctor away, as the saying goes.\"},\n",
+    "    {\"id\": \"vec6\", \"text\": \"日本国内有人把这起个案同中国社交网络上所谓“反日”言论相关联\"},\n",
+    "]\n",
+    "embeddings = pc.inference.embed(\n",
+    "    \"multilingual-e5-large\",\n",
+    "    inputs=[d['text'] for d in data],\n",
+    "    parameters={\n",
+    "        \"input_type\": \"passage\"\n",
+    "    }\n",
+    ")\n",
+    "vectors = []\n",
+    "for d, e in zip(data, embeddings):\n",
+    "    vectors.append({\n",
+    "        \"id\": d['id'],\n",
+    "        \"values\": e['values'],\n",
+    "        \"metadata\": {'text': d['text']}\n",
+    "    })\n",
+    "index.upsert(\n",
+    "    vectors=vectors,\n",
+    "    namespace=\"example\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No relevant docs were retrieved using the relevance score threshold 0.5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'这句话可以归类为：\\n\\n一级范畴：目的（成本目的、公关目的）、手段（政策手段、舆论手段）、内容（政治、社会）\\n\\n二级范畴：\\n- 目的：公关目的（在这个情境中，日方可能是试图通过管控反日言论来维护其国家形象和利益）\\n- 手段：政策手段（通过要求管控，可能是希望通过政策层面的措施来达成目的）、舆论手段（通过影响和控制社交媒体上的言论，试图引导公众舆论）\\n- 内容：政治（涉及中日两国之间的政治关系和外交互动）\\n\\n因此，这句话主要属于“目的”和“手段”的范畴，在二级范畴中具体为“公关目的”、“政策手段”和“舆论手段”，同时其讨论的“内容”是政治相关的话题。'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "import os\n",
     "from pinecone import Pinecone\n",
+    "from langchain import LLMChain\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.chains import RetrievalQA\n",
     "\n",
     "pc = Pinecone(api_key=\"a6c88ef7-fd5d-4164-9699-6c85371d88c8\")\n",
     "index = pc.Index(\"disinformation-tag\")\n",
@@ -164,15 +241,43 @@
     "embeddings = FakeEmbeddings(size=4096)\n",
     "from langchain_pinecone import PineconeVectorStore\n",
     "vector_store = PineconeVectorStore(index=index, embedding=embeddings)\n",
-    "\n",
+    "# 测试检索\n",
     "results = vector_store.similarity_search(\n",
-    "    \"LangChain provides abstractions to make working with LLMs easy\",\n",
+    "    \"日方要求管控中国网络社交媒体上的反日言论\",\n",
     "    k=1,\n",
-    "    filter={\"source\": \"tweet\"},\n",
+    "    filter={\"source\": \"ofiicial\"},\n",
     ")\n",
     "for res in results:\n",
     "    print(f\"* {res.page_content} [{res.metadata}]\")\n",
-    "    \n"
+    "#  封装成retriever\n",
+    "retriever = vector_store.as_retriever(\n",
+    "    search_type=\"similarity_score_threshold\",\n",
+    "    search_kwargs={\"k\": 1, \"score_threshold\": 0.5},\n",
+    ")\n",
+    "retriever.invoke(\"政治手段\", filter={\"source\": \"news\"}) \n",
+    "  \n",
+    " # 正式 \n",
+    "prompt = ChatPromptTemplate.from_template(\n",
+    "    \"请给 {ques} 这句话做出分类，判断文本属于源头（创建者、提问者）、目的（成本目的、公关目的）、手段（政策手段、舆论手段、军事手段、外交手段、其他手段）、内容（政治、社会、经济、科技）四大一级范畴（括号内为二级范畴）的哪一种，在一级范畴中又属于二级范畴的哪一种。\"\n",
+    ")\n",
+    "qa = RetrievalQA.from_chain_type(\n",
+    "    llm=llm,\n",
+    "    #prompt=prompt,\n",
+    "    chain_type=\"stuff\",\n",
+    "    retriever=vector_store.as_retriever()\n",
+    ")\n",
+    "\n",
+    "query = '''请给 {ques} 这句话做出分类，判断文本属于源头（创建者、提问者）、目的（成本目的、公关目的）、手段（政策手段、舆论手段、军事手段、外交手段、其他手段）、内容（政治、社会、经济、科技）四大一级范畴（括号内为二级范畴）的哪一种，在一级范畴中又属于二级范畴的哪一种。\"\n",
+    "'''.format(ques=\"日方要求管控中国网络社交媒体上的反日言论\")\n",
+    "qa.run(query)\n",
+    "\n",
+    "# # 带有源头的问答\n",
+    "# from langchain.chains import RetrievalQAWithSourcesChain\n",
+    "# qa_with_sources = RetrievalQAWithSourcesChain.from_chain_type(\n",
+    "#     llm=llm,\n",
+    "#     chain_type=\"stuff\",\n",
+    "#     retriever=vectorstore.as_retriever()\n",
+    "# )"
    ]
   },
   {
